--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ APP_SECRET=be9e18177724af972e1633133db81862
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-#DATABASE_URL="mysql://root:@127.0.0.1:3306/monprojetfinal"
-DATABASE_URL="mysql://dbu1167037:C251123c@db5013504494.hosting-data.io:3306/dbs11315579"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/monprojetfinal"
+#DATABASE_URL="mysql://dbu1167037:CRhDN4n6sj_u!+H@db5013504494.hosting-data.io:3306/dbs11315579"
 
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
