--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,8 +2,9 @@ security:
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
+        App\Entity\User: 'auto'
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+   
     providers:
         users_in_memory: { memory: null },
         app_user:
@@ -17,14 +18,15 @@ security:
         main:
             lazy: true
             provider: app_user
+            
             form_login:
-                login_path: /login
-                check_path: /login
+                login_path: app_login
+                check_path: app_login
                
             logout:
-                path: /logout
+                path: app_logout
                 target: /
-           
+          
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
