--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,12 +20,13 @@ security:
             provider: app_user
             
             form_login:
-                login_path: app_login
-                check_path: app_login
-               
+               login_path: app_login  
+               check_path: app_login
+
             logout:
                 path: app_logout
                 target: /
+           
           
 
             # activate different ways to authenticate
@@ -37,8 +38,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/admin, roles: ROLE_ADMIN }
-         - { path: ^/profile/login|reset-password, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/profile/login|reset-password, roles: ROLE_USER }
+         #- { path: ^/, roles: PUBLIC_ACCESS }
 
 when@test:
     security:
