--- a/.env.local
+++ b/.env.local
@@ -15,8 +15,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
-APP_DEBUG=0
+APP_ENV=dev
+#APP_ENV=prod
+#APP_DEBUG=1
 APP_SECRET=be9e18177724af972e1633133db81862
 ###< symfony/framework-bundle ###
 
@@ -25,8 +26,8 @@ APP_SECRET=be9e18177724af972e1633133db81862
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-#DATABASE_URL="mysql://root:@127.0.0.1:3306/monprojetfinal"
-DATABASE_URL="mysql://dbu5629447:C251123c@db5015385425.hosting-data.io:3306/dbs12603250"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/monprojetfinal"
+#DATABASE_URL="mysql://dbu1167037:CRhDN4n6sj_u!+H@db5013504494.hosting-data.io:3306/dbs11315579"
 
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
