--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -12,16 +12,16 @@ when@dev:
                 channels: ["!event"]
             # uncomment to get logging in your browser
             # you may have to allow bigger header sizes in your Web server configuration
-            #firephp:
+            # firephp:
             #    type: firephp
             #    level: info
-            #chromephp:
+            # chromephp:
             #    type: chromephp
             #    level: info
-            console:
-                type: console
-                process_psr_3_messages: false
-                channels: ["!event", "!doctrine", "!console"]
+            # console:
+            #     type: console
+            #     process_psr_3_messages: false
+            #     channels: ["!event", "!doctrine", "!console"]
 
 when@test:
     monolog:
@@ -42,20 +42,24 @@ when@prod:
         handlers:
             main:
                 type: fingers_crossed
-                action_level: error
-                handler: nested
-                excluded_http_codes: [404, 405]
-                buffer_size: 50 # How many messages should be saved? Prevent memory leaks
-            nested:
-                type: stream
-                path: php://stderr
-                level: debug
-                formatter: monolog.formatter.json
-            console:
-                type: console
-                process_psr_3_messages: false
-                channels: ["!event", "!doctrine"]
-            deprecation:
-                type: stream
-                channels: [deprecation]
-                path: php://stderr
+                action_level: info
+                handler: grouped
+            grouped:
+                type: group
+                members: [ streamed, deduplicated ]
+            streamed:
+                type: rotating_file
+                path: '%kernel.logs_dir%/%kernel.environment%.log'
+                level: info
+                max_files: 15
+            deduplicated:
+                type: deduplication
+                handler: symfony_mailer
+            symfony_mailer:
+                type: symfony_mailer
+                from_email: 'carolin.salloum@gmail.com'
+                to_email: 'carolin.salloum@gmail.com'
+                subject: 'Ajroudsoftwares, An Error Occurred! %%message%%'
+                level: critical
+                formatter: monolog.formatter.html
+                content_type: text/html
