--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,11 +10,15 @@
 >
     <php>
         <ini name="display_errors" value="1" />
+         <server name="APP_DEBUG" value="1"/>
         <ini name="error_reporting" value="-1" />
         <server name="APP_ENV" value="test" force="true" />
         <server name="SHELL_VERBOSITY" value="-1" />
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
+         <server name="MAILER_DSN" value="null://localhost"/>
+           <server name="TEST_BROWSER_BASE_URL" value="http://localhost"/>
+         
     </php>
 
     <testsuites>
